2002-07-23  Tristan Tarrant  <nadir@users.sourceforge.net>
	* keyactions.*: renamed functions to use north/south/east/west and
	  added diagonals (north-west, etc.), implemented running
	* data/bg/defaultkeys.txt data/si/defaultkeys.txt: added mapping
	  keypad keys for all 8 directions, added shift-arrows and
	  shift-keypad for running

2002-07-23  Jeff Freedman  <jeff@amy.nerble.net>

	* imagewin/iwin8.h,etc:  fill8() works in OpenGL.

2002-07-22  Jeff Freedman  <jeff@amy.nerble.net>

	* shapes/glshape.cc (GL_manager): Paint_image() used for images
	larger than 256x256.  Also, units changed from tiles to 'pixels'.

2002-07-22  Dominik Reichardt  <dominus@users.sourceforge.net>
	* README.Qtopia : added instructions by Artaxerxes on how
	  to compile Exult for the Zaurus PDA.

2002-07-22  Tristan Tarrant  <nadir@users.sourceforge.net>
	* exult.cc: pass key releases to the action handler too
	* keyactions.*: added ActionWalk* functions
	* keys.*: implemented mapping for key release
	* data/bg/defaultkeys.txt data/si/defaultkeys.txt: added walking
	  via arrows and remapped scrolling to alt-arrow

2002-07-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* content/islefaq/usecode.uc: fixed some typos and spacing

2002-07-22  Ryan Nunn <triforc@merlin.net.au>
	* gumps/Gump_manager.cc, gumps/Spellbook_gump.cc, usecode/ucinternal.cc:
	  std stuff.
	* msvcstuff/Exult.dsp, msvcstuff/msvc_kludges.h : Just enabled OpenGL
	  for myself.
	* shapes/glshape.cc : Disabled Depth Writing and Testing (see inline
	  note). Enabled Texture Clamping (vs wrapping) to clean up the output
	  a bit. Added a note about Alpha Blending (no code change though).

2002-07-22  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* glshape.h: dummy GL_manager class
	* exult.cc, gamewin.cc, mouse.h: include glshape.h
	* configure.in, Makefile.am: --enable-opengl

2002-07-22  Tristan Tarrant  <nadir@users.sourceforge.net>